# tp_c_hw1

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
linters/: run.sh
project/include/: utils.h
project/src/: main.c  utils.c
tests/: test_allocation.cpp  test_print.cpp  test_push.cpp  test_resize.cpp  test_sort.cpp  test_values.cpp  tests.cpp
